langtools/test/tools/javac/FloatingPointChanges/BadConstructorModifiers.out
BadConstructorModifiers.java:12:14: compiler.err.mod.not.allowed.here: strictfp
1 error
